# FileServerApp

./: .gitignore  DOWNLOAD_DELIVERABLES.json  DOWNLOAD_INSTRUCTIONS.txt  DOWNLOAD_SUMMARY.md  Profile.backup.tsx  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: cross-plat.yml  tauri-build.yml  tauri.yml  test.yml
.qoder/: rules
.qoder/rules/: not-here.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: AdvancedDownloadButton.tsx  AuthWrapper.tsx  BackendUrlUpdater.tsx  ContextMenu.tsx  CustomErrorDialog.tsx  DeleteConfirmDialog.tsx  DeleteDialog.tsx  DownloadButton.tsx  DownloadContextItem.tsx  DownloadExample.tsx  DownloadQueue.tsx  DropZone.tsx  DropZoneDemo.tsx  FileExplorer.tsx  FileGrid.tsx  FloatingUploadButton.tsx  GridItem.tsx  ImageViewer.tsx  IndexChatDialog.tsx  ListItem.tsx  LoggerTest.tsx  LogoutButton.tsx  MediaPlayer.tsx  NavigationSidebar.tsx  PlayerDemo.tsx  PlayerSettingsDebug.tsx  ProfileContent.tsx  ProfileOverlay.tsx  SettingsContent.tsx  SettingsWidget.tsx  Sidebar.tsx  TauriLoggerTest.tsx  TelegramSidebar.tsx  TelegramVerificationDialog.tsx  Thumbnail.tsx  TopBar.tsx  UploadProgressWidget.tsx  UserManagementContent.tsx  index.ts  types.ts
src/contexts/: ErrorHandlerContext.tsx
src/hooks/: index.ts  useBatchThumbnailLoader.ts  useDownloadManager.ts  useDropScanner.ts  useFileOperations.tsx  useFiles.ts  useFolderDrop.ts  useResponsiveGrid.ts  useScreenResolution.ts  useViteConnection.ts
(+37 files in other folders)
