[package]
name = "telegram-file-server"
version = "0.1.0"
description = "A Telegram Base Cloud Storage"
authors = ["pamod_madubashana"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.0.0-rc.13", features = [] }

[dependencies]
serde_json = "1.0.0"
serde = { version = "1.0.0", features = ["derive"] }
tauri = { version = "2.9.3", features = [] }
tauri-plugin-shell = "2.3.0"
tauri-plugin-dialog = "2.4.0"
tauri-plugin-http = "2.5.4"
tauri-plugin-log = "2.7.1"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
